fix of navigation wrapping in mobile

--- a/style.css
+++ b/style.css
@@ -753,6 +753,11 @@ article .the-content img {
 	h2{
 		font-size: 2.7rem;	
 	}
+
+  header nav ul li {
+    padding-right:2px;
+  }
+
 }
 
 
